# cs5296-graph-multihop-optimization

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: facebook_full.json  facebook_full_probe10.json  facebook_tiny.json  twitter_top10000.json
docs/: CS5296_local_oneclick_demo.ipynb  artifact_appendix.md  current_status_cn.md  demo_script.md  experiment_notes.md  project_handover_guide_cn.md  report_scaffold_notes.md  runbook.md
infra/: docker-compose.yml  janusgraph-jvm-11.options
results/raw/: janusgraph-facebook-tiny.jsonl  neo4j-facebook-full.jsonl  neo4j-facebook-tiny.jsonl  neo4j-facebook_tiny-live-demo.jsonl  neo4j-twitter-top10000.jsonl  postgres-facebook-full.jsonl  postgres-facebook-tiny.jsonl  postgres-facebook_tiny-live-demo.jsonl  postgres-twitter-top10000.jsonl
results/summary/: facebook-full-comparison.csv  facebook_tiny-live-demo-comparison.csv  janusgraph-facebook-tiny.csv  neo4j-facebook-full.csv  neo4j-facebook-tiny.csv  neo4j-facebook_tiny-live-demo.csv  neo4j-twitter-top10000.csv  postgres-facebook-full.csv  postgres-facebook-tiny.csv  (+3 more)
scripts/: aggregate_results.py  evaluate_partitioning.py  load_janusgraph.py  load_neo4j.py  load_postgres.py  plot_results.py  prepare_dataset.py  run_benchmark.py  smoke_test_core_backends.py  smoke_test_janusgraph.py
tests/: test_aggregate_results.py  test_benchmark_runner.py  test_canonical_dataset.py  test_closure.py  test_config.py  test_docs_smoke.py  test_load_janusgraph_script.py  test_package_smoke.py  test_partitioning.py  test_prepare_dataset_script.py  test_smoke_script.py
(+36 files in other folders)
